--- a/slides/learning_strategies/01-learning_strat.Rmd
+++ b/slides/learning_strategies/01-learning_strat.Rmd
@@ -82,151 +82,71 @@ class: inverse, center, middle
 
 ---
 
-# Some Tips
-
+# What do you understand by "active learning" ?
 
 .pull-left[
-An example using a leading `*`:
-
-    ```r
-    if (TRUE) {
-    ** message("Very important!")
-    }
-    ```
-Output:
-```r
-if (TRUE) {
-* message("Very important!")
-}
-```
-
-This is invalid R code, so it is a plain fenced code block that is not executed.
+- When was the last time 
+  - you "sat" in someone's class ? 
+  - some colleague else sat in your class ?
+--
+- When was the last you saw your own class/presentation ?
+  - Zoom
+  - Live class recorded
+- When was the last time you had your teaching materials reviewed by someone else?
 ]
 
 .pull-right[
-An example using `{{}}`:
+- Lesson Study
 
-````
-`r ''````{r tidy=FALSE}
-if (TRUE) {
-*{{ message("Very important!") }}
-}
-```
-````
-Output:
-```{r tidy=FALSE}
-if (TRUE) {
-{{ message("Very important!") }}
-}
-```
-
-It is valid R code so you can run it. Note that `{{}}` can wrap an R expression of multiple lines.
+- Learning Study
 ]
 
 ---
 
-# Some Tips
+# Text Books
 
-An example of using the trailing comment `#<<` to highlight lines:
 
-````markdown
-`r ''````{r tidy=FALSE}
-library(ggplot2)
-ggplot(mtcars) + 
-  aes(mpg, disp) + 
-  geom_point() +   #<<
-  geom_smooth()    #<<
-```
-````
+---
+# Metacognitive strategies
+- Fancy term for "thinking about cognitive skills"
+---
 
-Output:
+# Activity
+- All odd numbered persons turn around
+- Even number persons continue to watch the screen carefully
+<video>
+---
 
-```{r tidy=FALSE, eval=FALSE}
-library(ggplot2)
-ggplot(mtcars) + 
-  aes(mpg, disp) + 
-  geom_point() +   #<<
-  geom_smooth()    #<<
-```
+# All turn back
+- Odd numbered people answer the question on your screen (Even numbered people please wait)
+--
+- Even numbered people answer the question on your screen
+--
+- Use two modes of content delivery 
+  - Audio + visual.
+      - Visual can be text or image or both
+      - When using both, they must NOT repeat
+  - Audio must not repeat "ditto" what is on the screen
+---
+
+# Lazy Teaching
+- What is better?
+  - 80 % portion covered in class & student studying 50% of taught lessons ?
+  - 50% coverage and student gaining 80% of your taught lessons ?
+--
+- Some difficulty is GOOD for learning for all students
+- MORE difficult is BETTER for learning for some students
+- MOST difficult is BEST for learning, but only a few manage
 
 ---
 
-# Some Tips
-
-When you enable line-highlighting, you can also use the chunk option `highlight.output` to highlight specific lines of the text output from a code chunk. For example, `highlight.output = TRUE` means highlighting all lines, and `highlight.output = c(1, 3)` means highlighting the first and third line.
-
-````md
-`r ''````{r, highlight.output=c(1, 3)}
-head(iris)
-```
-````
-
-```{r, highlight.output=c(1, 3), echo=FALSE}
-head(iris)
-```
-
-Question: what does `highlight.output = c(TRUE, FALSE)` mean? (Hint: think about R's recycling of vectors)
-
----
-
-# Some Tips
-
-- To make slides work offline, you need to download a copy of remark.js in advance, because **xaringan** uses the online version by default (see the help page `?xaringan::moon_reader`).
-
-- You can use `xaringan::summon_remark()` to download the latest or a specified version of remark.js. By default, it is downloaded to `libs/remark-latest.min.js`.
-
-- Then change the `chakra` option in YAML to point to this file, e.g.
-
-    ```yaml
-    output:
-      xaringan::moon_reader:
-        chakra: libs/remark-latest.min.js
-    ```
-
-- If you used Google fonts in slides (the default theme uses _Yanone Kaffeesatz_, _Droid Serif_, and _Source Code Pro_), they won't work offline unless you download or install them locally. The Heroku app [google-webfonts-helper](https://google-webfonts-helper.herokuapp.com/fonts) can help you download fonts and generate the necessary CSS.
-
----
-
-# Macros
-
-- remark.js [allows users to define custom macros](https://github.com/yihui/xaringan/issues/80) (JS functions) that can be applied to Markdown text using the syntax `![:macroName arg1, arg2, ...]` or `![:macroName arg1, arg2, ...](this)`. For example, before remark.js initializes the slides, you can define a macro named `scale`:
-
-    ```js
-    remark.macros.scale = function (percentage) {
-      var url = this;
-      return '<img src="' + url + '" style="width: ' + percentage + '" />';
-    };
-    ```
-
-    Then the Markdown text
-
-    ```markdown
-    ![:scale 50%](image.jpg)
-    ```
-
-    will be translated to
-    
-    ```html
-    <img src="image.jpg" style="width: 50%" />
-    ```
-
----
-
-# Macros (continued)
-
-- To insert macros in **xaringan** slides, you can use the option `beforeInit` under the option `nature`, e.g.,
-
-    ```yaml
-    output:
-      xaringan::moon_reader:
-        nature:
-          beforeInit: "macros.js"
-    ```
-
-    You save your remark.js macros in the file `macros.js`.
-
-- The `beforeInit` option can be used to insert arbitrary JS code before `remark.create()`. Inserting macros is just one of its possible applications.
-
+# Being inclusive and equitable
+- Three levels of lesson objectives in your objectives
+  - An ideal expected learning goal *Ideal*
+--
+  - A bare minimum learning goal (for those on the edge of learning & not learning) *Expected*
+--
+  - A bar above the ideal (for those exemplar students) *Optional*
 ---
 
 # CSS
